# ShushDB

./: README.md  pyproject.toml
shushdb/: odb.py  proto.capnp
