[tool.poetry]
name = "shushdb"
version = "0.0.1"
description = "A secrets DB"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
lmdb = "^0.98"
pycapnp = "^0.6.4"

[tool.poetry.dev-dependencies]
poetry = "^1.0.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
